--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <!-- Card 1 -->
         <div class="card reveal" style="background: var(--card-gradient-1); color: #1f2d3a;">
           <div class="photo-container">
-            <img src="D:\my website\wallpaper2.jpg" alt="Photo1" class="photo">
+            <img src="wallpaper1.jpg" alt="Photo1" class="photo">
           </div>
           <div class="p-5 flex-1 flex flex-col">
             <h2 class="font-semibold text-xl mb-2">Profile👇</h2>
@@ -215,7 +215,7 @@ Main believe karta hoon ki learning ek continuous process hai jo kabhi khatam na
         <!-- Card 2 -->
         <div class="card reveal" style="background: var(--card-gradient-2); color: #1f2d3a;">
           <div class="photo-container">
-            <img src="D:\my website\wallpaper1.jpg" alt="Photo2" class="photo">
+            <img src="wallpaper2.jpg" alt="Photo2" class="photo">
           </div>
           <div class="p-5 flex-1 flex flex-col">
             <h2 class="font-semibold text-xl mb-2">Interests👇</h2>
@@ -234,7 +234,7 @@ Main believe karta hoon ki learning kabhi stop nahi honi chahiye.</p>
         <!-- Card 3 -->
         <div class="card reveal" style="background: var(--card-gradient-3); color: #1f2d3a;">
           <div class="photo-container">
-            <img src="D:\my website\wallpaper6.jpg" alt="Photo3" class="photo">
+            <img src="wallpaper6.jpg" alt="Photo3" class="photo">
           </div>
           <div class="p-5 flex-1 flex flex-col">
             <h2 class="font-semibold text-xl mb-2">Projects👇</h2>
@@ -253,7 +253,7 @@ Har project se maine naye tools aur techniques seekhe jo mere career ke liye hel
         <!-- Card 4 -->
         <div class="card reveal" style="background: var(--card-gradient-4); color: #1f2d3a;">
           <div class="photo-container">
-            <img src="D:\my website\wallpaper12.jpg" alt="Photo4" class="photo">
+            <img src="wallpaper16.jpg" alt="Photo4" class="photo">
           </div>
           <div class="p-5 flex-1 flex flex-col">
             <h2 class="font-semibold text-xl mb-2">Inspiration👇</h2>
@@ -271,7 +271,7 @@ Mere liye har din ek nayi learning ka chance hai jo mujhe future ke liye s</p>
         <!-- Card 5 -->
         <div class="card reveal" style="background: var(--card-gradient-5); color: #1f2d3a;">
           <div class="photo-container">
-            <img src="D:\my website\wallpaper16.jpg" alt="Photo5" class="photo">
+            <img src="wallpaper12.jpg" alt="Photo5" class="photo">
           </div>
           <div class="p-5 flex-1 flex flex-col">
             <h2 class="font-semibold text-xl mb-2">Goals👇</h2>
