--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
             <!-- Optional photo -->
             <div class="w-20 h-20 flex-shrink-0">
               <div class="photo-container">
-                <img src="D:\my website\wallpaper16.jpg" alt="Profile" class="photo rounded-full">
+                <img src="wallpaper16.jpg" alt="Profile" class="photo rounded-full">
               </div>
             </div>
             <div class="flex-1">
@@ -170,7 +170,7 @@
           <div class="flex items-start gap-5">
             <div class="w-20 h-20 flex-shrink-0">
               <div class="photo-container">
-                <img src="D:\my website\wallpaper16.jpg" alt="Journey" class="photo rounded-full">
+                <img src="wallpaper16.jpg" alt="Journey" class="photo rounded-full">
               </div>
             </div>
             <div class="flex-1">
@@ -215,7 +215,7 @@
           <div class="flex items-start gap-5">
             <div class="w-20 h-20 flex-shrink-0">
               <div class="photo-container">
-                <img src="D:\my website\wallpaper16.jpg" alt="Journey" class="photo rounded-full">
+                <img src="wallpaper16.jpg" alt="Journey" class="photo rounded-full">
               </div>
             </div>
             <div class="flex-1">
@@ -256,7 +256,7 @@
           <div class="flex items-start gap-5">
             <div class="w-20 h-20 flex-shrink-0">
               <div class="photo-container">
-                <img src="D:\my website\wallpaper16.jpg" alt="Journey" class="photo rounded-full">
+                <img src="wallpaper16.jpg" alt="Journey" class="photo rounded-full">
               </div>
             </div>
             <div class="flex-1">
