--- a/gallery.html
+++ b/gallery.html
@@ -151,67 +151,67 @@
       <!-- Gallery item 1 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper25.jpg" alt="Gallery1" class="photo w-full h-auto">
+          <img src="wallpaper25.jpg" alt="Gallery1" class="photo w-full h-auto">
         </div>
       </div>
       <!-- Gallery item 2 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper24.jpg" alt="Gallery2" class="photo w-full h-auto">
+          <img src="wallpaper24.jpg" alt="Gallery2" class="photo w-full h-auto">
         </div>
       </div>
       <!-- Gallery item 3 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper3.jpg" alt="Gallery3" class="photo w-full h-auto">
+          <img src="wallpaper3.jpg" alt="Gallery3" class="photo w-full h-auto">
         </div>
       </div>
       <!-- Gallery item 4 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper23.jpg" alt="Gallery4" class="photo w-full h-auto">
+          <img src="wallpaper23.jpg" alt="Gallery4" class="photo w-full h-auto">
         </div>
       </div>
       <!-- Gallery item 5 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper18.jpg" alt="Gallery5" class="photo w-full h-auto">
+          <img src="wallpaper18.jpg" alt="Gallery5" class="photo w-full h-auto">
         </div>
       </div>
       <!-- Gallery item 6 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper19.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper19.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
 	  <!-- Gallery item 7 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper20.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper20.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
 	  <!-- Gallery item 8 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper21.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper21.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
 	   <!-- Gallery item 9 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper7.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper7.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
 	  <!-- Gallery item 10 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper22.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper22.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
 	   <!-- Gallery item 11 -->
       <div class="card reveal">
         <div class="photo-container">
-          <img src="D:\my website\wallpaper11.jpg" alt="Gallery6" class="photo w-full h-auto">
+          <img src="wallpaper11.jpg" alt="Gallery6" class="photo w-full h-auto">
         </div>
       </div>
     </div>
