--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
   <!-- Main content -->
   <main class="max-w-3xl mx-auto px-5 py-16">
     <div class="text-center mb-10">
-      <h1 class="text-5xl font-extrabold gradient-text mb-2">Contact</h1>
+      <h1 class="text-5xl font-extrabold gradient-text mb-2">If you want to contact Rahul, you can fill out the form and click the send option.</h1>
       <p class="text-gray-600">Aap mujhse asaani se sampark kar sakte hain — neeche form bharein ya seedha email bhejein.</p>
     </div>
 
@@ -159,7 +159,7 @@
         <!-- Left: optional avatar/photo -->
         <div class="flex-shrink-0">
           <div class="photo-container w-36 h-36">
-            <img src="D:\my website\wallpaper17.jpg" alt="Profile" class="photo rounded-full shadow-md">
+            <img src="wallpaper17.jpg" alt="Profile" class="photo rounded-full shadow-md">
           </div>
         </div>
         <!-- Right: form + text -->
