--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
     <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between px-6 py-4 gap-4">
       <div class="flex items-center gap-2">
         <div class="text-2xl font-extrabold text-indigo-600">Rahul Kumar</div>
-        <div class="badge">Portfolio</div>
+        <div class="badge">Mr Rk</div>
       </div>
       <nav class="flex gap-6 flex-wrap">
         <a href="index.html" class="nav-link text-gray-700 hover:text-indigo-600">Home</a>
@@ -409,5 +409,6 @@
   </script>
 </body>
 </html>
+
 
 
