--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="max-w-7xl mx-auto flex flex-wrap items-center justify-between px-6 py-4 gap-4">
       <div class="flex items-center gap-2">
         <div class="text-2xl font-extrabold text-indigo-600">Rahul Kumar</div>
-        <div class="badge">Portfolio</div>
+        <div class="badge">Mr Rk, hii👋🏻</div>
       </div>
       <nav class="flex gap-6 flex-wrap">
         <a href="index.html" class="nav-link">Home</a>
@@ -365,4 +365,5 @@ Mujhe pata hai ki hard work, dedication aur passion ke saath main apne goals ach
   </script>
 </body>
 </html>
+
 
